# hermes-testing

./: .gitignore  CMake.vars.example  CMake.vars.example.Linux  CMake.vars.example.Windows  CMakeLists.txt  README.md  run.sh  runAll.sh
calculations/2d/: CMakeLists.txt
calculations/2d/01-poisson/: CMakeLists.txt  definitions.h  main.cpp
calculations/2d/02-poisson-newton/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
calculations/2d/03-navier-stokes/: CMakeLists.txt  definitions.cpp  (+1 more)
cmake/: CommonTargetProperties.cmake  FindHERMES.cmake  FindHERMES_COMMON.cmake
inner-functionality/: CMakeLists.txt
inner-functionality/2d/: CMakeLists.txt
inner-functionality/common/: CMakeLists.txt
inner-functionality/common/linear-solvers/complex/: CMakeLists.txt  main.cpp
inner-functionality/common/linear-solvers/real/: CMakeLists.txt  main.cpp
inner-functionality/common/matrix-export/real/: CMakeLists.txt  Real-Matrix-mumps-1-matio.mat-stored  Real-Matrix-mumps-2-market.mat-stored  Real-Matrix-mumps-3-matio.mat-stored  Real-Matrix-mumps-block-2-market.mat-stored  Real-Matrix-mumps-block-3-matio.mat-stored  Real-Matrix-umfpack-1-plain.mat-stored  Real-Matrix-umfpack-2-matio.mat-stored  Real-Matrix-umfpack-2-plain.mat-stored  Real-Matrix-umfpack-block-1-plain.mat-stored  Real-Matrix-umfpack-block-2-plain.mat-stored  Real-Vector-mumps-block-2-matio.vec-stored  Real-Vector-mumps-block-3-matio.vec-stored  Real-Vector-umfpack-block-1-matio.vec-stored  main.cpp
inner-functionality/common/matrix-export/real/linux/: Real-Matrix-umfpack-2-market.mat-stored  Real_Matrix_mumps_1_market.mat  Real_Matrix_mumps_1_market.mat_stored  Real_Matrix_mumps_2_market.mat_stored  Real_Matrix_mumps_2_plain.mat_stored  Real_Matrix_mumps_3_market.mat_stored  Real_Matrix_mumps_3_matio.mat_stored  Real_Matrix_mumps_3_plain.mat  Real_Matrix_mumps_block_1_market.mat_stored  Real_Matrix_mumps_block_1_plain.mat_stored  Real_Matrix_mumps_block_2_matio.mat  Real_Matrix_mumps_block_3_market.mat  Real_Matrix_mumps_block_3_matio.mat  Real_Matrix_mumps_block_3_plain.mat  Real_Matrix_umfpack_1_market.mat_stored  Real_Matrix_umfpack_1_matio.mat  Real_Matrix_umfpack_2_market.mat_stored  Real_Matrix_umfpack_2_matio.mat  Real_Matrix_umfpack_3_market.mat_stored  Real_Matrix_umfpack_block_1_matio.mat_stored  Real_Matrix_umfpack_block_2_market.mat_stored  Real_Matrix_umfpack_block_3_market.mat_stored  Real_Vector_mumps_1_matio.vec_stored  Real_Vector_mumps_2_matio.vec  Real_Vector_mumps_2_plain.vec_stored  Real_Vector_mumps_3_matio.vec  Real_Vector_mumps_3_plain.vec_stored  Real_Vector_mumps_block_1_market.vec  Real_Vector_mumps_block_3_market.vec_stored  Real_Vector_umfpack_2_market.vec_stored  Real_Vector_umfpack_block_1_market.vec_stored  Real_Vector_umfpack_block_3_market.vec_stored
inner-functionality/common/matrix-export/real/win/: Real-Matrix-mumps-3-market.mat-stored  Real-Matrix-mumps-block-1-market.mat-stored  Real-Matrix-mumps-block-2-plain.mat-stored  Real-Matrix-umfpack-1-market.mat-stored  Real-Matrix-umfpack-3-market.mat-stored  Real-Matrix-umfpack-3-plain.mat-stored  Real-Matrix-umfpack-block-2-market.mat-stored  Real-Matrix-umfpack-block-2-matio.mat-stored  Real-Matrix-umfpack-block-3-plain.mat-stored  Real-Vector-mumps-block-2-market.vec-stored  Real-Vector-umfpack-3-market.vec-stored  Real_Matrix_mumps_1_market.mat_stored  Real_Matrix_mumps_3_market.mat_stored  Real_Matrix_mumps_block_1_market.mat_stored  Real_Matrix_mumps_block_2_market.mat_stored  Real_Matrix_mumps_block_3_market.mat_stored  Real_Matrix_umfpack_1_market.mat_stored  Real_Matrix_umfpack_block_1_market.mat_stored  Real_Matrix_umfpack_block_1_matio.mat_stored  Real_Matrix_umfpack_block_2_market.mat_stored  Real_Matrix_umfpack_block_3_market.mat_stored  Real_Vector_umfpack_1_plain.vec_stored  Real_Vector_umfpack_2_market.vec_stored  Real_Vector_umfpack_block_1_market.vec_stored
inner-functionality/common/matrix-import-export/complex/: CMakeLists.txt  main.cpp
load-save/: CMakeLists.txt
load-save/mesh/: CMakeLists.txt  agros-test.msh  bad-1.xml  bad-2.xml  bad-3.xml  bad-4.xml  bad-5.xml  bad-6.xml  bad-7.xml  definitions.cpp  main.cpp
load-save/mesh-bson/: CMakeLists.txt  definitions.cpp  definitions.h  initial.xml  main.cpp  reference.bson  subdomains2.xml
load-save/solution/: CMakeLists.txt  constant_sln-final.xml  constant_sln-template.bson  constant_sln-template.xml  definitions.cpp  definitions.h  domain.xml  main.cpp  saved_sln_c-final.bson  saved_sln_c-final.xml  saved_sln_c-template.xml  saved_sln_r-template.xml
load-save/space/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
memory-leaks/: CMakeLists.txt
memory-leaks/01-memory-simple/: CMakeLists.txt  main.cpp
memory-leaks/01-simple/: CMakeLists.txt
memory-leaks/02-adapt/: CMakeLists.txt  main.cpp
memory-leaks/02-memory-adapt/: CMakeLists.txt  main.cpp
memory-leaks/03-memory-transient/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
memory-leaks/03-memory-transient-adapt/: CMakeLists.txt
memory-leaks/03-transient/: CMakeLists.txt
memory-leaks/04-memory-transient-adapt/: CMakeLists.txt  main.cpp
memory-leaks/05-memory-visualization/: CMakeLists.txt  definitions.h  main.cpp
memory-leaks/2d/: CMakeLists.txt
memory-leaks/2d/assembling/: CMakeLists.txt  definitions.cpp  definitions.h  domain.xml  main.cpp
memory-leaks/2d/horn-Agros/: CMakeLists.txt  agrosMesh.msh  definitions.cpp  definitions.h  main.cpp
memory-leaks/2d/mesh/: CMakeLists.txt  main.cpp
memory-leaks/2d/nurbs/: CMakeLists.txt  domain.xml  main.cpp
memory-leaks/2d/solution/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
performance/: CMakeLists.txt
performance/01-performance-simple/: CMakeLists.txt  definitions.cpp  main.cpp
performance/02-performance-adapt/: CMakeLists.txt  main.cpp
performance/03-performance-transient-adapt/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
testing-core/: CMakeLists.txt  testing-core.cpp  testing-core.h
visualization/views/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
(+140 files in other folders)
